# ozon_statistics

./: .gitignore  docker-compose.yml
app/: Dockerfile  config.py  enums.py  exam.py  main.py  my_celery.py  pyproject.toml  settings.py  tasks.py  test.py
app/services/: google_sheets.py  ozon_performance.py  ozon_seller.py  service_account.py  utils.py
